--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div class="container-fluid">
 <div class="row jumbotron">
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-          <p class="lead">random shit asdakdhsajkldhasldahskdlhksahjldasklhdlakshdlsa</p>
+          <p class="lead">TEMP PLACE HOLDER -- is it necessary?</p>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
       <a href="#"><button type="button" class="btn btn-outline-secondary">Temp</button></a>
@@ -148,6 +148,11 @@
         <i class="fas fa-database"></i>
           <h3>CISE Oracle</h3>
           <p>Built using the CISE Oracle DBMS.</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+        <i class="fab fa-php"></i>
+          <h3>PHP</h3>
+          <p>Connected the CISE Oracle DB with PHP.</p>
     </div>
 </div>
 <hr class="my-4">
