completed carousel, added some descriptions

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
   <div class="carousel-item active">
       <img src="img/background.png">
       <div class="carousel-caption">
-          <h1 class="display-2">Data Visualization</h1>
-          <h3> **Overview of the data visualization page**</h3>
+          <h1 class="dvtitle">Data Visualization</h1>
+          <h3 class="dvdesc"> Provides several visualizations on data, including comparative line graphs, pie charts, and more.
+              <br/> How has crime changed over time in an area? What has the weather been like historically?
+          </h3>
         <!--  <button type="button" class="btn btn-outline-light btn-lg">GO TO</button> -->
           <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='dv.html';">GO TO</button>
       </div>
@@ -68,7 +70,9 @@
       <img src="img/background2.png">
     <div class="carousel-caption">
       <h1 class="display-2">Status of Living Diagnostic </h1>
-      <h3> **Overview of this page** </h3>
+      <h3> Enables a user to specify weights for data profiles, and renders a score for a chosen area, using magic.
+          <br/> Where should I live?
+       </h3>
       <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='sld.html';">GO TO</button>
     </div>
   </div>
@@ -76,7 +80,7 @@
       <img src="img/background3.png">
       <div class="carousel-caption">
         <h1 class="display-2">Map Representation </h1>
-        <h3> **Overview of the map representation page** </h3>
+        <h3> How is the data geographically distributed in New York? In which areas is crime most prominent? </h3>
         <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='map.html';">GO TO</button>
       </div>
   </div>
@@ -84,7 +88,7 @@
           <img src="img/background4.png">
           <div class="carousel-caption">
             <h1 class="display-2">Filter/Search </h1>
-            <h3> **Overview of the filter/search page** </h3>
+            <h3> To conduct more specific searches. This tool filters the dataset and gets the desired information. </h3>
             <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='search.html';">GO TO</button>
           </div>
   </div>
@@ -122,8 +126,15 @@
       </div>
       <hr>
       <div class="col-12">
-          <p class="lead">Our data was collected from multiple sources such as, </p>
+          <p class="lead">The goal of our project is to provide users some greater insight on an area in
+            the state of New York. This is done by providing data visualizations on crime, climate, housing, and economical factors
+            within an area. With all this data in mind users can make weigh their options and make
+            a decision on where they would like to live in New York. If a user is stuck between several places
+            they can use the Status of Living Diagnostic to calculate scores for an area based on weights they enter, and
+            come to a conclusion that way. <br/>
+            Our data was collected from multiple sources such as, </p>
 </div>
+<hr>
 </div>
 
 <!--- Three Column Section -->
@@ -137,7 +148,7 @@
     <div class="col-xs-12 col-sm-6 col-md-4">
         <i class="fas fa-bold"></i>
           <h3>BOOTSTRAP</h3>
-          <p>Built using Bootstrap 4.</p>
+          <p>Built using the Bootstrap 4 framework.</p>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
         <i class="fab fa-css3"></i>
